@@ -1,5 +1,10 @@
 2007-09-26  David Gilbert  <david.gilbert@object-refinery.com>
 
+	* source/org/jfree/chart/renderer/xy/XYBarRenderer.java
+	(drawItem): Apply margin in a way that works for inverted axes.
+
+2007-09-26  David Gilbert  <david.gilbert@object-refinery.com>
+
 	* source/org/jfree/chart/plot/PlotUtilities.java: New class,
 	* source/org/jfree/data/general/DatasetUtilities.java
 	(isEmptyOrNull(XYDataset)): Return early if not empty,
